--- a/topics/3a_lussen_en_strings.ipynb
+++ b/topics/3a_lussen_en_strings.ipynb
@@ -78,10 +78,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -199,10 +196,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -321,10 +315,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -341,10 +332,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -370,10 +358,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -412,10 +397,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -430,10 +412,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -449,6 +428,14 @@
    ],
    "source": [
     "++a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9997394",
+   "metadata": {},
+   "source": [
+    "![Een voorbeeld van post- en pre-increment](../images/do-while.jpeg)"
    ]
   },
   {
@@ -472,10 +459,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -514,10 +498,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -532,10 +513,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -574,10 +552,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -666,10 +641,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -869,10 +841,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -900,10 +869,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -942,10 +908,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1027,10 +990,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1045,10 +1005,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1063,10 +1020,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1081,10 +1035,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1151,10 +1102,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1169,10 +1117,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1211,10 +1156,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1233,10 +1175,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1290,10 +1229,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1319,10 +1255,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1348,10 +1281,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1390,10 +1320,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1419,10 +1346,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1448,10 +1372,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1503,10 +1424,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1522,10 +1440,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1564,10 +1479,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1619,10 +1531,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1638,10 +1547,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1667,10 +1573,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "java"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1727,7 +1630,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.5+8-LTS"
   }
