Extra opgaven voor week 5 en dingen uit elkaar getrokken.

--- a/topics/6a_static_klassen.ipynb
+++ b/topics/6a_static_klassen.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# Context\n",
     "\n",
-    "Klassen en *instanties* van klassen"
+    "Deze les gaat over klassen en over objecten: *instanties* van klassen"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "tags": []
    },
    "source": [
-    "Eerder is een klasse beschreven als een \"blauwdruk\", het is de bouwtekening die vertelt wat nieuwe objecten moeten zijn. Denk aan de bouwtekening van een huis, op basis van die tekening kan een huis worden gebouwd, maar ook 100 of meer."
+    "Eerder is een klasse beschreven als een *blauwdruk*, het is de bouwtekening die vertelt wat nieuwe objecten moeten zijn. Denk aan de bouwtekening van een huis: op basis van die tekening kan één huis worden gebouwd, maar ook 100 of meer."
    ]
   },
   {
@@ -62,7 +62,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -96,7 +99,7 @@
     "tags": []
    },
    "source": [
-    "Deze klasse `House` definieert dat een huinummer nodig is (maar niet welke) en dat een kleur optioneel is. Pas bij een aanmaken van een huis (object) worden deze waarden concreet."
+    "De klasse `House` heeft twee constructors: één met alleen het huisnummer en een andere met zowel een huisnummer als een kleur. Dit geeft aan dat bij het maken van een huis in ieder geval een huisnummer meegegeven moet worden (maar niet welke), maar dat een kleur optioneel is. Pas bij een aanmaken van een huis (object) worden deze waarden concreet."
    ]
   },
   {
@@ -107,7 +110,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +129,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -146,7 +155,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -182,7 +194,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -219,7 +234,7 @@
     "tags": []
    },
    "source": [
-    "Een andere klasse, een spaarrekening waar geld op kan worden gestort. Let op, tot nu toe heb je methoden gezien die *statisch* gedefinieerd waren met het *keyword* `static` (denk aan `main`!), maar velden kunnen ook statisch zijn. Hier is het veld `balance` statisch gedefinieerd."
+    "Hierboven zie je een andere klasse, een spaarrekening waar geld op kan worden gestort. Let op, tot nu toe heb je methoden gezien die *statisch* gedefinieerd waren met het *keyword* `static` (denk aan `main`), maar *velden* kunnen ook statisch zijn. Hier is het veld `balance` statisch gedefinieerd. Let nu op wat er in de onderstaande code-voorbeelden gebeurt:"
    ]
   },
   {
@@ -230,7 +245,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +264,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -261,7 +282,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -284,7 +308,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -299,7 +326,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -322,7 +352,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -347,7 +380,7 @@
     "tags": []
    },
    "source": [
-    "Dat is makkelijk rijk worden! Maar wat gebeurt hier?"
+    "Dat is makkelijk rijk worden 😎. Maar wat gebeurt hier 🤔?"
    ]
   },
   {
@@ -362,20 +395,7 @@
    "source": [
     "### `static`\n",
     "\n",
-    "Een klasse is niet alleen maar een definitie, het *kan* ook waarden hebben!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "092dddf1-ae91-4d91-abeb-35958ae25940",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "> statische waarden zijn eigen aan de klasse, en niet per instantie"
+    "Een klasse is niet alleen maar een definitie, hij *kan* ook waarden hebben. Dit zijn zogenaamde *statische waarden*, die gedefinieerd zijn voor de klasse en daardoor hetzelfde zijn voor *alle* objecten die van die klasse gemaakt worden."
    ]
   },
   {
@@ -386,7 +406,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -427,34 +450,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e689bf37-11ee-43e7-bde4-26ed87c56530",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "We kunnen met de kennis die we al hebben van arrays én de kennis van de statische context nu nadoen wat Java doet als we het bovenstaande laten uitvoeren.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "63c5db2a-f3ac-4b7f-984c-541fcc380b39",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "String[] args = {\"Misja\"}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9df96b64-5883-4217-a2ff-c3d61698341b",
    "metadata": {
     "slideshow": {
@@ -474,7 +469,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -486,7 +484,8 @@
     }
    ],
    "source": [
-    "Hello.main(args)"
+    "String[] args = {\"Misja\"};\n",
+    "Hello.main(args);"
    ]
   },
   {
@@ -525,7 +524,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -585,7 +587,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -610,7 +615,7 @@
     "tags": []
    },
    "source": [
-    "|                | `static`                              | *niet* `static`<br>(per instantie)    |\n",
+    "|                | `static`<br>(voor de hele klasse)     | *niet* `static`<br>(per instantie)    |\n",
     "|----------------|---------------------------------------|---------------------------------------|\n",
     "| methode        | `Math.sqrt()`<br>`Integer.parseInt()` | `name.length()`<br>`text.charAt()`    |\n",
     "| veld/variabele | `Math.PI`                             | `args.length`<br>`name.toUpperCase()` |"
@@ -626,7 +631,7 @@
     "tags": []
    },
    "source": [
-    "Je hebt inmiddels zowel methoden als klassen in een object- én statische context gebruikt, je zal hier een aantal aanroepen wellicht herkennen? "
+    "Je hebt inmiddels zowel methoden als klassen in een objectcontext én in een statische context gebruikt; je zal hier een aantal aanroepen wellicht herkennen. "
    ]
   },
   {
@@ -641,7 +646,7 @@
    "source": [
     "## Onverandelijkheid\n",
     "\n",
-    "Het is nu `final`!"
+    "Door gebruik te maken van `final` zorg je ervoor dat een eenmaal aangemaakte variabele niet meer van waarde kan veranderen. Deze is nu `final`."
    ]
   },
   {
@@ -652,7 +657,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -669,7 +677,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -695,7 +706,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -721,7 +735,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -747,7 +764,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -775,384 +795,7 @@
     "tags": []
    },
    "source": [
-    "De conventie is dat `final` velden met een hoofdletter worden geschreven. Het geeft aan dat het *constanten* zijn, onveranderlijke waarden."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f6163fb-f9a9-4b02-94f6-e1c5e8ac89d7",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Arrays\n",
-    "\n",
-    "Zijn ook \"final\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fea74727-64df-4b00-9424-e18d3cfeb014",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "Als eenmaal de grootte is bepaald dan kan deze niet meer worden gewijzigd, het array kan niet meer worden uitgebreid. De elementen in het array kunnen nog wel worden gewijzigd."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "ee4035d9-0c6f-4ad4-86c2-073dbf80de25",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class Lingo {\n",
-    "    private char[] letters;\n",
-    "    \n",
-    "    public Lingo(String word) {\n",
-    "        letters = new char[word.length()];\n",
-    "        \n",
-    "        for (int i = 0; i < letters.length; i++) {\n",
-    "            letters[i] = word.charAt(i);\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
-    "    public boolean guessLetter(int position, char letter) {\n",
-    "        if (letters[position] == letter) {\n",
-    "            return true;\n",
-    "        }\n",
-    "        return false;\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "99031470-12ac-4c47-859d-e08d8157a561",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "Lingo game = new Lingo(\"opzet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "b1d47bff-c6a7-4948-878b-267d2cedac25",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game.guessLetter(0, 'z')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15aa11a6-a57d-4c80-94f5-9994bbf9e356",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Collecties\n",
-    "\n",
-    "Zijn \"flexibel\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88688f05-1b1c-410a-94ba-ff7990c6e538",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "> objecten die andere objecten bevatten"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9fa17c5a-5762-4dea-a118-629392ed0cbc",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "Arrays zijn eenvoudige types voor het beheren van een collectie elementen. Collecties zijn typen die veel flexibeler zijn, bijvoorbeeld ze groeien en weer krimpen (in tegenstelling tot arrays waar de lengte vast is)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "d88cb315-adc3-4b86-9059-b7a717c43bbd",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import java.util.ArrayList;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "4b4d0d97-a35d-4ecf-b444-5ffc3819effe",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ArrayList<String> gameWords = new ArrayList<String>();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "cdfda69b-68b9-4c35-964a-add57c9fdc45",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameWords.add(\"opzet\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "41e4c85e-d3d7-4ca3-8605-cfe017ad37e3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameWords.add(\"pannekoek\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "31ef308a-1632-48a6-86db-205ac27725a3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameWords.size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "fdc79fb3-de1e-4e7d-b89f-140cd02b69a6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pannekoek"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameWords.remove(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "477f3fdf-efe0-4b0b-a22e-666f02fbb7b3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameWords.add(\"pannenkoek\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "da40534a-86d7-4d0f-9be2-a93ff6ac3bab",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[opzet, pannenkoek]"
-     ]
-    }
-   ],
-   "source": [
-    "System.out.print(gameWords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "8ef47095-15bb-48e1-99a7-fffcd2403e71",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "opzet\n",
-      "pannenkoek\n"
-     ]
-    }
-   ],
-   "source": [
-    "for (String woord: gameWords) {\n",
-    "    System.out.println(woord);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "349bb7d9-05cb-481f-8562-c3c8a2220465",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "![Word cloud](images/6/word_cloud.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3542829-4801-42f8-bb47-736245af1b8d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "In hoofdstuk [12](https://books.trinket.io/thinkjava2/chapter12.html) tot en met [13](https://books.trinket.io/thinkjava2/chapter13.html) worden kaartspellen uitgewerkt, in opgave [simulatie](/problems/simulation/index) ga je dit voor het spel oorlogje (\"War\") uitwerken en het spel simuleren."
+    "De conventie is dat `final` velden met hoofdletters worden geschreven. Het geeft aan dat het *constanten* zijn, onveranderlijke waarden."
    ]
   }
  ],
