Changed `Logger.java`; this solves issue #7

--- a/problems/logger/index.ipynb
+++ b/problems/logger/index.ipynb
@@ -46,13 +46,15 @@
    "source": [
     "## Gebruik maken van de logger\n",
     "\n",
-    "Gebruik maken van de bovenstaande klasse **Logger** is een kwestie van een instantie maken en de methode **log** aanroepen:\n",
+    "Gebruik maken van de bovenstaande klasse `Logger` is een kwestie van een instantie maken en de methode `log` aanroepen:\n",
+    "\n",
     "```Java\n",
     "Logger logger = new Logger();\n",
     "logger.log(\"Hello world!\");\n",
     "```\n",
     "\n",
-    "De onderstaande klasse **ReadFile** maakt op deze wijze gebruik van de klasse **Logger**:\n",
+    "De onderstaande klasse `ReadFile` maakt op deze wijze gebruik van de klasse `Logger`:\n",
+    "\n",
     "```Java\n",
     "public class ReadFile {\n",
     "\n",
@@ -63,9 +65,7 @@
     "    }\n",
     "\n",
     "    public String[] readLines() throws IOException {\n",
-    "        try (\n",
-    "                BufferedReader br = new BufferedReader(new FileReader(filename));\n",
-    "                ) {\n",
+    "        try (BufferedReader br = new BufferedReader(new FileReader(filename))) {\n",
     "            String[] lines = (String[])br.lines().toArray();\n",
     "            Logger logger = new Logger();\n",
     "            logger.log(lines.length+\" lines read succesfully from file \"+filename);\n",
@@ -76,11 +76,11 @@
     "        }\n",
     "        return null;\n",
     "    }\n",
+    "}\n",
     "```\n",
     "\n",
-    "Maak een nieuw project (of een package binnen een bestaand project) en naam de klassen **Logger** en **ReadFile** over.\n",
+    "Maak een nieuw project (of een package binnen een bestaand project) en neem de klassen `Logger` en `ReadFile` over. Maak vervolgens een main-klasse met main-methode met daarin de volgende regels code:\n",
     "\n",
-    "Maak vervolgens een main-klasse met main-methode met daarin de volgende regels code:\n",
     "```Java\n",
     "    Logger logger = new Logger();\n",
     "    logger.log(\"Start program\");\n",
@@ -99,7 +99,7 @@
     "    logger.log(\"Eind of program\");\n",
     "```\n",
     "\n",
-    "Eventueel kan een bestand **test.txt** gemaakt worden. Maar voor deze oefening maakt het niet veel uit of het bestand bestaat of niet."
+    "Eventueel kan een bestand `test.txt` gemaakt worden, maar voor deze oefening maakt het niet veel uit of het bestand bestaat of niet."
    ]
   },
   {
@@ -107,9 +107,9 @@
    "id": "d758d2eb",
    "metadata": {},
    "source": [
-    "## Aantal instanties van de klasse Logger\n",
+    "## Aantal instanties van de klasse `Logger`\n",
     "\n",
-    "Hoeveel instanties van de klasse **Logger** worden gemaakt als het programma wordt uitgevoerd?\n",
+    "Hoeveel instanties van de klasse `Logger` worden gemaakt als het programma wordt uitgevoerd?\n",
     "\n",
     "Hoe is dat te zien in de code?\n",
     "\n",
@@ -121,9 +121,9 @@
    "id": "f37450df",
    "metadata": {},
    "source": [
-    "## Eén instantie van klasse Logger\n",
+    "## Eén instantie van klasse `Logger`\n",
     "\n",
-    "Zorg ervoor dat in het hele programma dezelfde instantie van de klasse **Logger** wordt gebruikt. Er mag slechts één instantie van **Logger** bestaan. Maak daarbij gebruik van het singleton pattern."
+    "Zorg ervoor dat in het hele programma dezelfde instantie van de klasse `Logger` wordt gebruikt. Er mag slechts één instantie van `Logger` bestaan. Maak daarbij gebruik van het singleton pattern."
    ]
   },
   {
@@ -133,9 +133,9 @@
    "source": [
     "## Evaluatie\n",
     "\n",
-    "Hoe is na te gaan of er daadwerkelijk slechts één instantie van klasse **Logger** is?\n",
+    "Hoe is na te gaan of er daadwerkelijk slechts één instantie van klasse `Logger` is?\n",
     "\n",
-    "Het singleton pattern is niet de enige manier om er voor te zorgen dat alle onderdelen van het programma dezelfde instantie van klasse **Logger** gebruiken. Er is veel kritiek op het gebruik van het singleton pattern. Beschrijf een goed en werkbaar alternatief voor gebruik van het singleton pattern om een vergelijkbaar resultaat te krijgen. Pas dit eventueel toe."
+    "Het singleton pattern is niet de enige manier om er voor te zorgen dat alle onderdelen van het programma dezelfde instantie van klasse `Logger` gebruiken. Er is veel kritiek op het gebruik van het singleton pattern. Beschrijf een goed en werkbaar alternatief voor gebruik van het singleton pattern om een vergelijkbaar resultaat te krijgen. Pas dit eventueel toe."
    ]
   }
  ],
@@ -149,7 +149,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.12+7-Ubuntu-0ubuntu3"
   }
