Fout "nameUpper" -> "name"
In dit stukje code wordt een voorbeeld gegeven, maar dit voorbeeld werkt niet aangezien `nameUpper` nooit is aangemaakt (een kopieer fout van het vorige voorbeeld)

--- a/topics/4b_immutable_objecten.ipynb
+++ b/topics/4b_immutable_objecten.ipynb
@@ -186,7 +186,7 @@
    "source": [
     "String name = \"Alan Turing\";\n",
     "name=name.toUpperCase();\n",
-    "System.out.println(nameUpper);"
+    "System.out.println(name);"
    ]
   },
   {
