--- a/topics/5a_mutable_klassen_en_objecten.ipynb
+++ b/topics/5a_mutable_klassen_en_objecten.ipynb
@@ -284,8 +284,8 @@
    ],
    "source": [
     "public static Point getPointBetween(Point p1, Point p2) {\n",
-    "    punt1.x=(punt1.x+punt2.x)/2;\n",
-    "    punt1.y=(punt1.y+punt2.y)/2;\n",
+    "    punt1.x=(p1.x+p2.x)/2;\n",
+    "    punt1.y=(p1.y+p2.y)/2;\n",
     "    return punt1;\n",
     "}\n",
     "\n",
