Fout "double x=(point1.getX()+point2.getX())/2;\n" ->"double x=(p1.getX()+p2.getX())/2;\n"

--- a/topics/5a_mutable_klassen_en_objecten.ipynb
+++ b/topics/5a_mutable_klassen_en_objecten.ipynb
@@ -327,8 +327,8 @@
    ],
    "source": [
     "public static Point getPointBetween(Point p1, Point p2) {\n",
-    "    double x=(punt1.getX()+punt2.getX())/2;\n",
-    "    double y=(punt1.getY()+punt2.getY())/2;\n",
+    "    double x=(p1.getX()+p2.getX())/2;\n",
+    "    double y=(p1.getY()+p2.getY())/2;\n",
     "    return new Point((int)x,(int)y); // (int) -> cast van double naar integer\n",
     "}\n",
     "\n",
