--- a/_sources/topics/9a_design_patterns.ipynb
+++ b/_sources/topics/9a_design_patterns.ipynb
@@ -716,7 +716,7 @@
    "source": [
     "| Creational                                                                          | Structural                                                                                    | Behavioral                                                                                                                                                                        |\n",
     "|-------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Abstract Factory<br> Builder<br> **Factory Method**<br> Prototype<br> **Singleton** | Adapter<br> Bridge<br> **Composite**<br> **Decorator**<br> Facade<br> Flyweight<br> **Proxy** | Chain of Responsibility<br> **Command**<br> Interpreter<br> **Iterator**<br> Mediator<br> Memento<br> **Observer**<br> **State**<br> Strategy<br> **Template Method**<br> Visitor |"
+    "| **Abstract Factory**<br> Builder<br> **Factory Method**<br> Prototype<br> **Singleton** | **Adapter**<br> Bridge<br> **Composite**<br> **Decorator**<br> **Facade**<br> Flyweight<br> Proxy | Chain of Responsibility<br> **Command**<br> Interpreter<br> **Iterator**<br> Mediator<br> Memento<br> **Observer**<br> **State**<br> **Strategy**<br> **Template Method**<br> Visitor |"
    ]
   },
   {
